AC_INIT(libiptable.cpp)
AM_INIT_AUTOMAKE(flaim-module-iptable, 0.7.0)
AC_CANONICAL_BUILD
AC_CANONICAL_HOST
case $host in
	*-apple-*)
		flagvar='-flat_namespace -bundle -undefined suppress'
		AC_SUBST(flagvar)
    		;;
	*)
		flagvar='-shared'
		AC_SUBST(flagvar)
    		;;
esac
bindir='$(prefix)/flaim/modules/iptable'
datadir='$(prefix)/flaim/modules/iptable'
pkgdatadir='$(prefix)/flaim/modules/iptable'
CXXFLAGS='-fPIC'
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_OUTPUT(Makefile)
