AC_INIT(nfdump.cpp)
AM_INIT_AUTOMAKE(flaim-module-nfdump, 0.7.0)
AC_CANONICAL_BUILD
AC_CANONICAL_HOST
case $host in
	*-apple-*)
		flagvar='-flat_namespace -bundle -undefined suppress'
		AC_SUBST(flagvar)
    		;;
	*)
		flagvar='-shared'
		AC_SUBST(flagvar)
    		;;
esac
bindir='$(prefix)/flaim/modules/nfdump'
datadir='$(prefix)/flaim/modules/nfdump'
pkgdatadir='$(prefix)/flaim/modules/nfdump'
CXXFLAGS='-fPIC'
AC_CHECK_SIZEOF(void *)

#AC_C_CONST
#AC_C_INLINE
AC_C_BIGENDIAN
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_OUTPUT(Makefile)
